# chiprs

./: .gitignore  Cargo.toml  README.md
assembly/: Cargo.toml
assembly/examples/: abort.asm  calls.asm  render-digits.asm  simple.asm  timed-rendering.asm  wait-key.asm
assembly/src/: main.rs
chip8/: Cargo.toml
chip8/src/: assembly.rs  emulator.rs  instructions.rs  lib.rs  machine.rs
chip8/src/assembly/: lexer.rs  parser.rs
emulator/: Cargo.toml
emulator/examples/: simple.rom
emulator/src/: app.rs  event.rs  main.rs  tui.rs  ui.rs  update.rs
emulator/src/widgets/: display.rs
