[package]
name = "emulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chip8 = { version = "0.1.0", path = "../chip8" }
clap = { version = "4.5.0", features = ["derive"] }
crossterm = "0.27.0"
ratatui = { version = "0.26.1", features = ["unstable-widget-ref"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "json", "env-filter"] }
